syntax = "proto3";

package tech.kayys.wayang.workflow.v1;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "tech.kayys.wayang.workflow.v1";
option java_outer_classname = "WorkflowSchedulerProto";

service WorkflowSchedulerService {
  rpc CreateSchedule(CreateScheduleRequest) returns (WorkflowSchedule);
  rpc ListSchedules(ListSchedulesRequest) returns (ListSchedulesResponse);
  rpc GetSchedule(GetScheduleRequest) returns (WorkflowSchedule);
  rpc UpdateSchedule(UpdateScheduleRequest) returns (WorkflowSchedule);
  rpc DeleteSchedule(GetScheduleRequest) returns (google.protobuf.Empty);
  rpc GetExecutionHistory(GetExecutionHistoryRequest)
      returns (GetExecutionHistoryResponse);
}

message WorkflowSchedule {
  string schedule_id = 1;
  string workflow_id = 2;
  string status = 3; // ENABLED, DISABLED
  int64 next_execution_at = 4;
  int64 execution_count = 5;
  string cron_expression = 6;
  string timezone = 7;
}

message CreateScheduleRequest {
  string workflow_id = 1;
  string cron_expression = 2;
  string timezone = 3;
  bool enabled = 4;
  map<string, string> inputs = 5;
}

message ListSchedulesRequest {
  string tenant_id = 1;
  string workflow_id = 2;
  bool enabled = 3; // Optional, so use carefully or wrapper types if strict
                    // nullability needed
}

message ListSchedulesResponse { repeated WorkflowSchedule schedules = 1; }

message GetScheduleRequest { string schedule_id = 1; }

message UpdateScheduleRequest {
  string schedule_id = 1;
  string cron_expression = 2;
  bool enabled = 3;
  map<string, string> inputs = 4;
}

message GetExecutionHistoryRequest {
  string schedule_id = 1;
  int32 limit = 2;
}

message ExecutionHistoryItem {
  string schedule_id = 1;
  string run_id = 2;
  int64 scheduled_at = 3;
  int64 executed_at = 4;
  string status = 5;
}

message GetExecutionHistoryResponse {
  repeated ExecutionHistoryItem history = 1;
}
